# StreamServer

./: Cargo.toml  readme.adoc
src/: consumer.rs  main.rs  producer.rs  video_store.rs
