[package]
name = "StreamServer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
bytes = "1.5.0"
futures = "0.3"
http-body-util = "0.1.0"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.10"
tower = "0.4"

async-broadcast = "0.7.0"
tst = "0.10.1"

reqwest = { version = "0.11", features = ["stream"] }
async-trait = "0.1.72"
